--- a/diag-tools.yml
+++ b/diag-tools.yml
@@ -14,3 +14,4 @@ spec:
       containers:
       - name: diag-tools
         image: yabramkin/diag-tools:latest
+        command: [ "/bin/bash", "-ce", "tail -f /dev/null" ]
